# cetitec_tasks

./: CMakeLists.txt  build.bat  run_test.bat
docs/: Report.docx
source/: binomial_coefficient.cpp  binomial_coefficient.h  console_spreadsheet.cpp  console_spreadsheet.h  main.cpp  matrix_multiplication.cpp  matrix_multiplication.h
tests/: CMakeLists.txt  spreadsheet_test1_input.txt  spreadsheet_test2_input.txt  spreadsheet_test3_input.txt  test_binomial_coefficient.cpp  test_console_spreadsheet.cpp  test_matrix_multiplication.cpp
